--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
