--- a/frontend/src/pages/HomePage/HomePage.module.scss
+++ b/frontend/src/pages/HomePage/HomePage.module.scss
@@ -2,18 +2,22 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  overflow: hidden;
 
   .wrapper {
     display: flex;
     flex: 1;
     height: 100%;
+    overflow: hidden;
   }
 
   .chatArea {
     flex: 1;
     padding: 20px;
     background-color: #fafafa;
-    overflow-y: auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
   }
 
   .placeholder {
